test/hep/cernlib/minuit-umlfit1.out
Traceback (most recent call last):
  File "minuit-umlfit1.py", line 15, in ?
    [ {"x": random.normalvariate(3, 1)} for i in xrange(100) ])
  File "/home/samuel/dev/pyhep/py/hep/cernlib/minuit.py", line 239, in maximumLikelihoodFit
    parameters = normalizeParameters(parameters)
  File "/home/samuel/dev/pyhep/py/hep/minimize.py", line 42, in normalizeParameters
    bound_lo, bound_hi = map(float, parameter[3])
TypeError: argument 2 to map() must support iteration
